--- a/notebooks/run_gpt2_medium_training.ipynb
+++ b/notebooks/run_gpt2_medium_training.ipynb
@@ -5,12 +5,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import pandas\n",
-    "import torch\n",
-    "from torch.utils.data import random_split\n",
-    "from shared_code.fine_tuning.tensor_encoding.tensor_encoding import TokenizerAdapter\n",
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
-    "from transformers import TrainingArguments, Trainer"
+    "!pip install git+https://github.com/huggingface/transformers@main\n",
+    "!pip install accelerate\n",
+    "!pip install git+https://github.com/AJStangl/gpt-model-finetuning@master\n",
+    "!pip install  simpletransformers==0.63.3"
    ],
    "metadata": {
     "collapsed": false
@@ -21,7 +19,49 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "model_name = \"yuri-bot\"\n",
+    "from torch.utils.data import Dataset, random_split\n",
+    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
+    "from transformers import TrainingArguments, Trainer\n",
+    "import gc\n",
+    "import os\n",
+    "import logging\n",
+    "import pandas\n",
+    "import torch\n",
+    "import gc\n",
+    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
+    "from shared_code.fine_tuning.tensor_encoding.tensor_encoding import TokenizerAdapter\n",
+    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
+    "import pandas\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, random_split\n",
+    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
+    "from transformers import TrainingArguments, Trainer\n",
+    "import logging\n",
+    "import pandas\n",
+    "from simpletransformers.language_modeling import LanguageModelingModel"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "use_head_model = False\n",
+    "write_text_file = False"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model_name = \"yuli-bot\"\n",
     "\n",
     "parent_directory = \"/content/drive/MyDrive/RawData\"\n",
     "\n",
@@ -40,16 +80,31 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2-medium',\n",
-    "\t\t\t\t\t\t\t\t\t\t  bos_token='<|startoftext|>',\n",
-    "\t\t\t\t\t\t\t\t\t\t  eos_token='<|endoftext|>',\n",
-    "\t\t\t\t\t\t\t\t\t\t  pad_token='<|pad|>')\n",
-    "\n",
-    "tokenizer.save_pretrained(model_output_dir)\n",
-    "\n",
-    "model = GPT2LMHeadModel.from_pretrained('gpt2-medium').cuda()\n",
-    "\n",
-    "tokenizer_adapter = TokenizerAdapter(tokenizer)"
+    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2-medium', bos_token='<|startoftext|>', eos_token='<|endoftext|>', pad_token='<|pad|>')\n",
+    "tokenizer_adapter = TokenizerAdapter(tokenizer)\n",
+    "model = None\n",
+    "if use_head_model:\n",
+    "\ttokenizer.save_pretrained(model_output_dir)\n",
+    "\tmodel = GPT2LMHeadModel.from_pretrained('gpt2-medium').cuda()\n",
+    "\ttokenizer_adapter = TokenizerAdapter(tokenizer)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def has_valid_line(input: str) -> bool:\n",
+    "    black_list = [\"**NO SIGN**\", \"**Image Stats:**\", \"**INCOMPLETE MEAT TUBE**\", \"[removed]\", \"[deleted]\", 'Unfortunately, your post was removed for the following reason(s)']\n",
+    "    for line in black_list:\n",
+    "        if input.__contains__(line):\n",
+    "            print(f\":: Line contains word {line}... Skipping\")\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True"
    ],
    "metadata": {
     "collapsed": false
@@ -65,8 +120,9 @@
     "conversations = list(df['TrainingString'])\n",
     "\n",
     "valid_lines = []\n",
+    "\n",
     "for conversation in conversations:\n",
-    "\tif tokenizer_adapter.token_length_appropriate(conversation):\n",
+    "\tif tokenizer_adapter.token_length_appropriate(conversation) and has_valid_line(conversation):\n",
     "\t\tvalid_lines.append(conversation)"
    ],
    "metadata": {
@@ -78,25 +134,34 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
-    "\n",
     "generator = torch.Generator()\n",
     "\n",
     "generator.manual_seed(0)\n",
     "\n",
-    "print(f\":: Total Number Of Samples {len(valid_lines)}\")\n",
+    "logging.info(f\":: Total Number Of Samples {len(valid_lines)}\")\n",
     "\n",
-    "max_length = max([len(tokenizer.encode(prompt)) for prompt in valid_lines])\n",
+    "if use_head_model and model:\n",
     "\n",
-    "model.resize_token_embeddings(len(tokenizer))\n",
+    "\tmax_length = max([len(tokenizer.encode(prompt)) for prompt in valid_lines])\n",
     "\n",
-    "print(f\":: Max Length Of Sample {max_length}\")\n",
+    "\tmodel.resize_token_embeddings(len(tokenizer))\n",
     "\n",
-    "dataset = RedditDataset(valid_lines, tokenizer, max_length=max_length)\n",
+    "\tlogging.info(f\":: Max Length Of Sample {max_length}\")\n",
     "\n",
-    "train_size = int(0.9 * len(dataset))\n",
+    "\tdataset = RedditDataset(valid_lines, tokenizer, max_length=max_length)\n",
     "\n",
-    "train_dataset, eval_dataset = random_split(dataset, [train_size, len(dataset) - train_size], generator=generator)"
+    "\ttrain_size = int(0.9 * len(dataset))\n",
+    "\n",
+    "\ttrain_dataset, eval_dataset = random_split(dataset, [train_size, len(dataset) - train_size], generator=generator)\n",
+    "\n",
+    "else: # Do it the other way with a file\n",
+    "\ttrain_size = int(0.9 * len(valid_lines))\n",
+    "\n",
+    "\ttrain_dataset, eval_dataset = random_split(list(valid_lines), [train_size, len(valid_lines) - train_size], generator=generator)\n",
+    "\n",
+    "\twith open(\"train.txt\", 'w', encoding=\"utf-8\") as train_out, open(\"eval.txt\", \"w\", encoding=\"utf-8\") as eval_out:\n",
+    "\t\ttrain_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in train_dataset])\n",
+    "\t\teval_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in eval_dataset])"
    ],
    "metadata": {
     "collapsed": false
@@ -107,16 +172,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "training_args = TrainingArguments(output_dir=model_output_dir)\n",
-    "training_args.num_train_epochs = 5\n",
-    "training_args.logging_steps = 100\n",
-    "training_args.save_steps = 1000\n",
-    "training_args.weight_decay = 0.05\n",
-    "training_args.logging_dir = './logs'\n",
-    "training_args.fp16 = True\n",
-    "training_args.auto_find_batch_size = True\n",
-    "training_args.gradient_accumulation_steps = 50\n",
-    "training_args.learning_rate = 1e-4"
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()"
    ],
    "metadata": {
     "collapsed": false
@@ -127,11 +184,40 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "trainer: Trainer = Trainer(model=model, args=training_args, train_dataset=train_dataset, eval_dataset=eval_dataset,\n",
-    "\t\t\t\t\t\t   data_collator=lambda data: {'input_ids': torch.stack([f[0] for f in data]),\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t   'attention_mask': torch.stack([f[1] for f in data]),\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t   'labels': torch.stack([f[0] for f in data])\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t   })"
+    "if use_head_model:\n",
+    "\ttraining_args = TrainingArguments(output_dir=model_output_dir)\n",
+    "\ttraining_args.num_train_epochs = 5\n",
+    "\ttraining_args.logging_steps = 100\n",
+    "\ttraining_args.save_steps = 1000\n",
+    "\ttraining_args.weight_decay = 0.05\n",
+    "\ttraining_args.logging_dir = './logs'\n",
+    "\ttraining_args.fp16 = True\n",
+    "\ttraining_args.auto_find_batch_size = True\n",
+    "\ttraining_args.gradient_accumulation_steps = 50\n",
+    "\ttraining_args.learning_rate = 1e-4\n",
+    "else:\n",
+    "\ttraining_args = {\n",
+    "    \"overwrite_output_dir\": True,\n",
+    "    \"learning_rate\": 1e-4,\n",
+    "    \"gradient_accumulation_steps\": 100,\n",
+    "    \"dataset_type\": \"simple\",\n",
+    "    \"sliding_window\": True,\n",
+    "    \"max_seq_length\": 1024,\n",
+    "\t\"mlm\": False, # has to be false for gpt-2\n",
+    "    \"evaluate_during_training\": True,\n",
+    "    \"use_cached_eval_features\": True,\n",
+    "    \"evaluate_during_training_verbose\": True,\n",
+    "    \"save_optimizer_and_scheduler\": False,\n",
+    "    \"save_eval_checkpoints\": True,\n",
+    "    \"save_model_every_epoch\": False,\n",
+    "    \"save_steps\": -1,\n",
+    "    \"train_batch_size\":3,\n",
+    "    \"num_train_epochs\":12,\n",
+    "    \"output_dir\": f\"{model_output_dir}/\",\n",
+    "\t\"best_model_dir\": f\"{model_output_dir}/best_model\",\n",
+    "}\n",
+    "model = LanguageModelingModel(\"gpt2\", \"gpt2-medium\", args=training_args)\n",
+    "model.train_model(train_file=\"train.txt\", eval_file=\"eval.txt\", args=training_args, verbose=True)"
    ],
    "metadata": {
     "collapsed": false
@@ -142,9 +228,26 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "trainer.train()\n",
+    "if use_head_model:\n",
+    "\ttrainer: Trainer = Trainer(model=model, args=training_args, train_dataset=train_dataset, eval_dataset=eval_dataset,\n",
+    "\t\t\t\t\t\t\t   data_collator=lambda data: {'input_ids': torch.stack([f[0] for f in data]),\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t   'attention_mask': torch.stack([f[1] for f in data]),\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t   'labels': torch.stack([f[0] for f in data])\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t   })\n",
+    "\ttrainer.train()\n",
+    "\ttrainer.save_model()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "\n",
-    "trainer.save_model()"
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -155,7 +258,10 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "expecte_prompt = \"I love these bizarro eras of weirdness in AI development after it becomes possible to do but before it's perfected. Image synthesis itself was in the same place for several years back in the mid to late 2010s.\"\n",
+    "import re\n",
+    "tag_match = f\"\\<\\|(.*)\\|\\>\"\n",
+    "pattern = re.compile(tag_match)\n",
+    "expected_prompt = \"I love these bizarro eras of weirdness in AI development after it becomes possible to do but before it's perfected. Image synthesis itself was in the same place for several years back in the mid to late 2010s.\"\n",
     "\n",
     "prompt = \"<|soss r/dalle2|><|sot|>Detailed scientific diagram depicting the anatomy of a tomato, full colour, realistic<|sost|>https://i.imgur.com/7adBOXn.jpg<|sor u/AsterJ|>It's going to be sad day when it learns to properly spell.  I feel like this era is a fleeting moment in AI history.  We must cherish it.<|eor|><|sor\"\n",
     "\n",
