Updating notebook with correct values

--- a/notebooks/run_gpt2_medium_training.ipynb
+++ b/notebooks/run_gpt2_medium_training.ipynb
@@ -5,6 +5,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "\n",
     "!pip install git+https://github.com/huggingface/transformers@main\n",
     "!pip install accelerate\n",
     "!pip install git+https://github.com/AJStangl/gpt-model-finetuning@master\n",
@@ -19,26 +20,19 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, random_split\n",
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
-    "from transformers import TrainingArguments, Trainer\n",
+    "\n",
     "import gc\n",
-    "import os\n",
     "import logging\n",
+    "\n",
     "import pandas\n",
     "import torch\n",
-    "import gc\n",
-    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
-    "from shared_code.fine_tuning.tensor_encoding.tensor_encoding import TokenizerAdapter\n",
-    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
-    "import pandas\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, random_split\n",
+    "from simpletransformers.language_modeling import LanguageModelingModel\n",
+    "from torch.utils.data import random_split\n",
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
     "from transformers import TrainingArguments, Trainer\n",
-    "import logging\n",
-    "import pandas\n",
-    "from simpletransformers.language_modeling import LanguageModelingModel"
+    "\n",
+    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
+    "from shared_code.fine_tuning.tensor_encoding import TokenizerAdapter"
    ],
    "metadata": {
     "collapsed": false
@@ -97,14 +91,40 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def has_valid_line(input: str) -> bool:\n",
-    "    black_list = [\"**NO SIGN**\", \"**Image Stats:**\", \"**INCOMPLETE MEAT TUBE**\", \"[removed]\", \"[deleted]\", 'Unfortunately, your post was removed for the following reason(s)']\n",
+    "def has_valid_line(input_string: str) -> bool:\n",
+    "    black_list = [\n",
+    "\t\t\"[removed]\",\n",
+    "\t\t\"[deleted]\"\n",
+    "\t]\n",
     "    for line in black_list:\n",
-    "        if input.__contains__(line):\n",
+    "        if input_string.__contains__(line):\n",
     "            print(f\":: Line contains word {line}... Skipping\")\n",
     "            return False\n",
     "        else:\n",
     "            return True"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def token_length_appropriate(prompt) -> bool:\n",
+    "    \"\"\"\n",
+    "    Ensures that the total number of encoded tokens is within acceptable limits.\n",
+    "    :param tokenizer: An instance of the tokenizer being used.\n",
+    "    :param prompt: UTF-8 Text that is assumed to have been processed.\n",
+    "    :return: True if acceptable.\n",
+    "    \"\"\"\n",
+    "    tokens =  tokenizer.tokenize(prompt)\n",
+    "    if len(tokens) > 1024:\n",
+    "        print(f\":: Tokens for model input is > {1024}. Skipping input\")\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True"
    ],
    "metadata": {
     "collapsed": false
@@ -184,7 +204,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "if use_head_model:\n",
+    "if use_head_model: # For Trainer\n",
     "\ttraining_args = TrainingArguments(output_dir=model_output_dir)\n",
     "\ttraining_args.num_train_epochs = 5\n",
     "\ttraining_args.logging_steps = 100\n",
@@ -195,7 +215,7 @@
     "\ttraining_args.auto_find_batch_size = True\n",
     "\ttraining_args.gradient_accumulation_steps = 50\n",
     "\ttraining_args.learning_rate = 1e-4\n",
-    "else:\n",
+    "else: # For LanguageModelingModel training\n",
     "\ttraining_args = {\n",
     "    \"overwrite_output_dir\": True,\n",
     "    \"learning_rate\": 1e-4,\n",
