Added setup tools and stuff

--- a/notebooks/run_gpt2_medium_training.ipynb
+++ b/notebooks/run_gpt2_medium_training.ipynb
@@ -5,10 +5,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/huggingface/transformers@main\n",
-    "!pip install accelerate\n",
-    "!pip install git+https://github.com/AJStangl/gpt-model-finetuning@master\n",
-    "!pip install  simpletransformers==0.63.3"
+    "!pip install git+https: // github.com / huggingface / transformers @ main > / dev / null\n",
+    "!pip install accelerate > / dev / null\n",
+    "!pip install  simpletransformers == 0.63.3 > / dev / null"
    ],
    "metadata": {
     "collapsed": false
@@ -19,31 +18,34 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
-    "import gc\n",
-    "import logging\n",
-    "\n",
-    "import pandas\n",
-    "import torch\n",
+    "!nvidia-smi"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, random_split\n",
     "from simpletransformers.language_modeling import LanguageModelingModel\n",
-    "from torch.utils.data import random_split\n",
     "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
     "from transformers import TrainingArguments, Trainer\n",
-    "\n",
-    "from shared_code.fine_tuning.datasets.reddit_dataset import RedditDataset\n",
-    "from shared_code.fine_tuning.tensor_encoding import TokenizerAdapter"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "use_head_model = False\n",
-    "write_text_file = False"
+    "import gc\n",
+    "import os\n",
+    "import logging\n",
+    "import pandas\n",
+    "import torch\n",
+    "import gc\n",
+    "import pandas\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset, random_split\n",
+    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
+    "from transformers import TrainingArguments, Trainer\n",
+    "import logging\n",
+    "import pandas"
    ],
    "metadata": {
     "collapsed": false
@@ -62,7 +64,7 @@
     "\n",
     "tokenizer_path = f\"{model_output_dir}\"\n",
     "\n",
-    "training_data_path = f\"/content/drive/MyDrive/RawData/training.csv\""
+    "training_data_path = f\"{model_output_dir}/training_2.csv\""
    ],
    "metadata": {
     "collapsed": false
@@ -73,13 +75,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2-medium', bos_token='<|startoftext|>', eos_token='<|endoftext|>', pad_token='<|pad|>')\n",
-    "tokenizer_adapter = TokenizerAdapter(tokenizer)\n",
-    "model = None\n",
-    "if use_head_model:\n",
-    "\ttokenizer.save_pretrained(model_output_dir)\n",
-    "\tmodel = GPT2LMHeadModel.from_pretrained('gpt2-medium').cuda()\n",
-    "\ttokenizer_adapter = TokenizerAdapter(tokenizer)"
+    "def has_valid_line(input: str) -> bool:\n",
+    "\tblack_list = [\"**NO SIGN**\", \"**Image Stats:**\", \"**INCOMPLETE MEAT TUBE**\", \"[removed]\", \"[deleted]\",\n",
+    "\t\t\t\t  'Unfortunately, your post was removed for the following reason(s)']\n",
+    "\tfor line in black_list:\n",
+    "\t\tif input.__contains__(line):\n",
+    "\t\t\tprint(f\":: Line contains word {line}... Skipping\")\n",
+    "\t\t\treturn False\n",
+    "\t\telse:\n",
+    "\t\t\treturn True"
    ],
    "metadata": {
     "collapsed": false
@@ -90,40 +94,22 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def has_valid_line(input_string: str) -> bool:\n",
-    "    black_list = [\n",
-    "\t\t\"[removed]\",\n",
-    "\t\t\"[deleted]\"\n",
-    "\t]\n",
-    "    for line in black_list:\n",
-    "        if input_string.__contains__(line):\n",
-    "            print(f\":: Line contains word {line}... Skipping\")\n",
-    "            return False\n",
-    "        else:\n",
-    "            return True"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
+    "tokenizer = GPT2Tokenizer.from_pretrained('gpt2-medium')\n",
+    "\n",
+    "\n",
     "def token_length_appropriate(prompt) -> bool:\n",
-    "    \"\"\"\n",
+    "\t\"\"\"\n",
     "    Ensures that the total number of encoded tokens is within acceptable limits.\n",
     "    :param tokenizer: An instance of the tokenizer being used.\n",
     "    :param prompt: UTF-8 Text that is assumed to have been processed.\n",
     "    :return: True if acceptable.\n",
     "    \"\"\"\n",
-    "    tokens =  tokenizer.tokenize(prompt)\n",
-    "    if len(tokens) > 1024:\n",
-    "        print(f\":: Tokens for model input is > {1024}. Skipping input\")\n",
-    "        return False\n",
-    "    else:\n",
-    "        return True"
+    "\ttokens = tokenizer.tokenize(prompt)\n",
+    "\tif len(tokens) > 1024:\n",
+    "\t\tprint(f\":: Tokens for model input is > {1024}. Skipping input\")\n",
+    "\t\treturn False\n",
+    "\telse:\n",
+    "\t\treturn True"
    ],
    "metadata": {
     "collapsed": false
@@ -139,9 +125,9 @@
     "conversations = list(df['TrainingString'])\n",
     "\n",
     "valid_lines = []\n",
-    "\n",
     "for conversation in conversations:\n",
-    "\tif tokenizer_adapter.token_length_appropriate(conversation) and has_valid_line(conversation):\n",
+    "\t# if has_valid_line(conversation):\n",
+    "\tif token_length_appropriate(conversation) and has_valid_line(conversation):\n",
     "\t\tvalid_lines.append(conversation)"
    ],
    "metadata": {
@@ -157,30 +143,19 @@
     "\n",
     "generator.manual_seed(0)\n",
     "\n",
-    "logging.info(f\":: Total Number Of Samples {len(valid_lines)}\")\n",
+    "print(f\":: Total Number Of Samples {len(valid_lines)}\")\n",
     "\n",
-    "if use_head_model and model:\n",
+    "train_size = int(0.9 * len(valid_lines))\n",
     "\n",
-    "\tmax_length = max([len(tokenizer.encode(prompt)) for prompt in valid_lines])\n",
+    "train_dataset_file, eval_dataset_file = random_split(list(valid_lines), [train_size, len(valid_lines) - train_size],\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t generator=generator)\n",
     "\n",
-    "\tmodel.resize_token_embeddings(len(tokenizer))\n",
+    "with open(\"train.txt\", 'w', encoding=\"utf-8\") as train_out, open(\"eval.txt\", \"w\", encoding=\"utf-8\") as eval_out:\n",
+    "\t# for line in train_dataset_file:\n",
+    "\ttrain_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in train_dataset_file])\n",
     "\n",
-    "\tlogging.info(f\":: Max Length Of Sample {max_length}\")\n",
-    "\n",
-    "\tdataset = RedditDataset(valid_lines, tokenizer, max_length=max_length)\n",
-    "\n",
-    "\ttrain_size = int(0.9 * len(dataset))\n",
-    "\n",
-    "\ttrain_dataset, eval_dataset = random_split(dataset, [train_size, len(dataset) - train_size], generator=generator)\n",
-    "\n",
-    "else: # Do it the other way with a file\n",
-    "\ttrain_size = int(0.9 * len(valid_lines))\n",
-    "\n",
-    "\ttrain_dataset, eval_dataset = random_split(list(valid_lines), [train_size, len(valid_lines) - train_size], generator=generator)\n",
-    "\n",
-    "\twith open(\"train.txt\", 'w', encoding=\"utf-8\") as train_out, open(\"eval.txt\", \"w\", encoding=\"utf-8\") as eval_out:\n",
-    "\t\ttrain_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in train_dataset])\n",
-    "\t\teval_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in eval_dataset])"
+    "\t# for line in eval_dataset_file:\n",
+    "\teval_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in eval_dataset_file])\n"
    ],
    "metadata": {
     "collapsed": false
@@ -192,6 +167,7 @@
    "outputs": [],
    "source": [
     "gc.collect()\n",
+    "\n",
     "torch.cuda.empty_cache()"
    ],
    "metadata": {
@@ -203,58 +179,28 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "if use_head_model: # For Trainer\n",
-    "\ttraining_args = TrainingArguments(output_dir=model_output_dir)\n",
-    "\ttraining_args.num_train_epochs = 5\n",
-    "\ttraining_args.logging_steps = 100\n",
-    "\ttraining_args.save_steps = 1000\n",
-    "\ttraining_args.weight_decay = 0.05\n",
-    "\ttraining_args.logging_dir = './logs'\n",
-    "\ttraining_args.fp16 = True\n",
-    "\ttraining_args.auto_find_batch_size = True\n",
-    "\ttraining_args.gradient_accumulation_steps = 50\n",
-    "\ttraining_args.learning_rate = 1e-4\n",
-    "else: # For LanguageModelingModel training\n",
-    "\ttraining_args = {\n",
-    "    \"overwrite_output_dir\": True,\n",
-    "    \"learning_rate\": 1e-4,\n",
-    "    \"gradient_accumulation_steps\": 100,\n",
-    "    \"dataset_type\": \"simple\",\n",
-    "    \"sliding_window\": True,\n",
-    "    \"max_seq_length\": 1024,\n",
-    "\t\"mlm\": False, # has to be false for gpt-2\n",
-    "    \"evaluate_during_training\": True,\n",
-    "    \"use_cached_eval_features\": True,\n",
-    "    \"evaluate_during_training_verbose\": True,\n",
-    "    \"save_optimizer_and_scheduler\": False,\n",
-    "    \"save_eval_checkpoints\": True,\n",
-    "    \"save_model_every_epoch\": False,\n",
-    "    \"save_steps\": -1,\n",
-    "    \"train_batch_size\":3,\n",
-    "    \"num_train_epochs\":12,\n",
-    "    \"output_dir\": f\"{model_output_dir}/\",\n",
-    "\t\"best_model_dir\": f\"{model_output_dir}/best_model\",\n",
+    "args = {\n",
+    "\t\"overwrite_output_dir\": True,\n",
+    "\t\"learning_rate\": 1e-4,\n",
+    "\t\"gradient_accumulation_steps\": 100,\n",
+    "\t\"dataset_type\": \"simple\",\n",
+    "\t\"sliding_window\": True,\n",
+    "\t\"max_seq_length\": 1024,\n",
+    "\t\"mlm\": False,  # has to be false for gpt-2\n",
+    "\t\"evaluate_during_training\": True,\n",
+    "\t\"use_cached_eval_features\": True,\n",
+    "\t\"evaluate_during_training_verbose\": True,\n",
+    "\t\"save_optimizer_and_scheduler\": False,\n",
+    "\t\"save_eval_checkpoints\": False,\n",
+    "\t\"save_model_every_epoch\": True,\n",
+    "\t\"save_steps\": -1,\n",
+    "\t\"train_batch_size\": 3,\n",
+    "\t\"num_train_epochs\": 24,\n",
+    "\t\"output_dir\": f\"{model_output_dir}/\",\n",
+    "\t\"best_model_dir\": f\"{model_output_dir}/best_model\"\n",
     "}\n",
-    "model = LanguageModelingModel(\"gpt2\", \"gpt2-medium\", args=training_args)\n",
-    "model.train_model(train_file=\"train.txt\", eval_file=\"eval.txt\", args=training_args, verbose=True)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "if use_head_model:\n",
-    "\ttrainer: Trainer = Trainer(model=model, args=training_args, train_dataset=train_dataset, eval_dataset=eval_dataset,\n",
-    "\t\t\t\t\t\t\t   data_collator=lambda data: {'input_ids': torch.stack([f[0] for f in data]),\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t   'attention_mask': torch.stack([f[1] for f in data]),\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t   'labels': torch.stack([f[0] for f in data])\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t   })\n",
-    "\ttrainer.train()\n",
-    "\ttrainer.save_model()"
+    "model = LanguageModelingModel(\"gpt2\", \"gpt2-medium\", args=args)\n",
+    "model.train_model(train_file=\"train.txt\", eval_file=\"eval.txt\", args=args, verbose=True)"
    ],
    "metadata": {
     "collapsed": false
@@ -266,28 +212,73 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "tag_match = f\"\\<\\|(.*)\\|\\>\"\n",
-    "pattern = re.compile(tag_match)\n",
-    "expected_prompt = \"I love these bizarro eras of weirdness in AI development after it becomes possible to do but before it's perfected. Image synthesis itself was in the same place for several years back in the mid to late 2010s.\"\n",
+    "def capture_tag(test_string: str, expected_tag: str):\n",
+    "\tregex = r\"\\<\\|(.*)\\|\\>\"\n",
     "\n",
-    "prompt = \"<|soss r/dalle2|><|sot|>Detailed scientific diagram depicting the anatomy of a tomato, full colour, realistic<|sost|>https://i.imgur.com/7adBOXn.jpg<|sor u/AsterJ|>It's going to be sad day when it learns to properly spell.  I feel like this era is a fleeting moment in AI history.  We must cherish it.<|eor|><|sor\"\n",
+    "\tmatches = re.finditer(regex, test_string, re.MULTILINE)\n",
     "\n",
-    "generated = tokenizer(f\"<|startoftext|> {prompt}\", return_tensors=\"pt\")\n",
+    "\tfor matchNum, match in enumerate(matches, start=1):\n",
     "\n",
-    "sample_outputs = model.generate(inputs=generated.input_ids.cuda(),\n",
-    "\t\t\t\t\t\t\t\tattention_mask=generated['attention_mask'].cuda(),\n",
-    "                                do_sample=True,\n",
-    "                                top_k=40,\n",
-    "\t\t\t\t\t\t\t\tmax_length=1024,\n",
-    "                                top_p=0.8,\n",
-    "                                temperature=0.8,\n",
-    "                                num_return_sequences=10,\n",
-    "\t\t\t\t\t\t\t\trepetition_penalty=1.08,\n",
-    "                                stop_token='<|endoftext|>')\n",
+    "\t\tprint(\"Match {matchNum} was found at {start}-{end}: {match}\".format(matchNum=matchNum, start=match.start(),\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tend=match.end(), match=match.group()))\n",
     "\n",
-    "for i, sample_output in enumerate(sample_outputs):\n",
-    "    result = tokenizer.decode(sample_output, skip_special_tokens=True)\n",
-    "    print(\"{}: {}\".format(i, result.replace(prompt, \"\")))"
+    "\t\tif match.group() == expected_tag:\n",
+    "\t\t\treturn_string = test_string.replace(match.group(), \"\")\n",
+    "\t\t\treturn return_string\n",
+    "\n",
+    "\t\tfor groupNum in range(0, len(match.groups())):\n",
+    "\t\t\tgroupNum = groupNum + 1\n",
+    "\n",
+    "\t\t\tprint(\"Group {groupNum} found at {start}-{end}: {group}\".format(groupNum=groupNum,\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tstart=match.start(groupNum),\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tend=match.end(groupNum),\n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tgroup=match.group(groupNum)))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from simpletransformers.language_generation import LanguageGenerationModel, LanguageGenerationArgs\n",
+    "\n",
+    "text_model_generator = LanguageGenerationModel(\"gpt2\", f\"{model_output_dir}/best_model\", args={\n",
+    "\t'max_length': 1000,\n",
+    "\t'num_return_sequences': 1,\n",
+    "\t'repetition_penalty': 1.01,\n",
+    "\t'stop_token': '<|endoftext|>',\n",
+    "\t'temperature': 0.8,\n",
+    "\t'top_k': 40,\n",
+    "})\n",
+    "\n",
+    "print(\n",
+    "\t\"It's going to be sad day when it learns to properly spell.  I feel like this era is a fleeting moment in AI history.  We must cherish it.\")\n",
+    "prompt = \"<|soss r/dalle2|><|sot|>Detailed scientific diagram depicting the anatomy of a tomato, full colour, realistic<|sost|>https://i.imgur.com/7adBOXn.jpg<|sor u/AsterJ|>It's going to be sad day when it learns to properly spell.  I feel like this era is a fleeting moment in AI history.  We must cherish it.<|eor|><|sor|>\"\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "regex = r\"\\<\\|(.*)\\|\\>\"\n",
+    "\n",
+    "reply = None\n",
+    "refresh_args = {\n",
+    "\t'max_length': 1000,\n",
+    "\t'num_return_sequences': 1,\n",
+    "\t'repetition_penalty': 1.01,\n",
+    "\t'stop_token': '<|endoftext|>',\n",
+    "\t'temperature': 0.8,\n",
+    "\t'top_k': 40,\n",
+    "}\n",
+    "while reply is None:\n",
+    "\tfor text in text_model_generator.generate(prompt=prompt, args=refresh_args, verbose=True):\n",
+    "\t\tfoo = text.replace(prompt, \"\\n\")\n",
+    "\t\tresult = capture_tag(foo, \"<|eor|>\")\n",
+    "\t\tif result != None:\n",
+    "\t\t\treply = result\n",
+    "\t\t\tbreak\n",
+    "print(reply)"
    ],
    "metadata": {
     "collapsed": false
