Adding example for large xl model that may or may not be great

--- a/notebooks/run_gpt2_medium_training.ipynb
+++ b/notebooks/run_gpt2_medium_training.ipynb
@@ -29,23 +29,14 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, random_split\n",
+    "\n",
+    "import gc\n",
+    "\n",
+    "import pandas\n",
+    "import torch\n",
     "from simpletransformers.language_modeling import LanguageModelingModel\n",
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
-    "from transformers import TrainingArguments, Trainer\n",
-    "import gc\n",
-    "import os\n",
-    "import logging\n",
-    "import pandas\n",
-    "import torch\n",
-    "import gc\n",
-    "import pandas\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, random_split\n",
-    "from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
-    "from transformers import TrainingArguments, Trainer\n",
-    "import logging\n",
-    "import pandas"
+    "from torch.utils.data import random_split\n",
+    "from transformers import GPT2Tokenizer"
    ],
    "metadata": {
     "collapsed": false
@@ -56,15 +47,26 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "model_name = \"yuli-bot\"\n",
+    "model_name = \"foo-bot-gpt2\""
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "parent_directory = \"/path/to/parent/dir/for/whatever\"\n",
     "\n",
-    "parent_directory = \"/content/drive/MyDrive/RawData\"\n",
+    "data_dir = f\"{parent_directory}/data\"\n",
     "\n",
     "model_output_dir = f\"{parent_directory}/{model_name}\"\n",
     "\n",
     "tokenizer_path = f\"{model_output_dir}\"\n",
     "\n",
-    "training_data_path = f\"{model_output_dir}/training_2.csv\""
+    "training_data_path = f\"{data_dir}/{model_name}-training.csv\""
    ],
    "metadata": {
     "collapsed": false
@@ -126,9 +128,9 @@
     "\n",
     "valid_lines = []\n",
     "for conversation in conversations:\n",
-    "\t# if has_valid_line(conversation):\n",
-    "\tif token_length_appropriate(conversation) and has_valid_line(conversation):\n",
-    "\t\tvalid_lines.append(conversation)"
+    "    # if has_valid_line(conversation):\n",
+    "    if token_length_appropriate(conversation) and has_valid_line(conversation):\n",
+    "        valid_lines.append(conversation)"
    ],
    "metadata": {
     "collapsed": false
@@ -147,15 +149,14 @@
     "\n",
     "train_size = int(0.9 * len(valid_lines))\n",
     "\n",
-    "train_dataset_file, eval_dataset_file = random_split(list(valid_lines), [train_size, len(valid_lines) - train_size],\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t generator=generator)\n",
+    "train_dataset_file, eval_dataset_file = random_split(list(valid_lines), [train_size, len(valid_lines) - train_size], generator=generator)\n",
     "\n",
     "with open(\"train.txt\", 'w', encoding=\"utf-8\") as train_out, open(\"eval.txt\", \"w\", encoding=\"utf-8\") as eval_out:\n",
-    "\t# for line in train_dataset_file:\n",
-    "\ttrain_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in train_dataset_file])\n",
+    "    # for line in train_dataset_file:\n",
+    "        train_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in train_dataset_file])\n",
     "\n",
-    "\t# for line in eval_dataset_file:\n",
-    "\teval_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in eval_dataset_file])\n"
+    "    # for line in eval_dataset_file:\n",
+    "        eval_out.writelines([repr(line)[1:-1] + \"<|endoftext|>\" + \"\\n\" for line in eval_dataset_file])"
    ],
    "metadata": {
     "collapsed": false
@@ -195,7 +196,7 @@
     "\t\"save_model_every_epoch\": True,\n",
     "\t\"save_steps\": -1,\n",
     "\t\"train_batch_size\": 3,\n",
-    "\t\"num_train_epochs\": 24,\n",
+    "\t\"num_train_epochs\": 12,\n",
     "\t\"output_dir\": f\"{model_output_dir}/\",\n",
     "\t\"best_model_dir\": f\"{model_output_dir}/best_model\"\n",
     "}\n",
@@ -211,7 +212,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "import re\n",
+    "\n",
     "def capture_tag(test_string: str, expected_tag: str):\n",
     "\tregex = r\"\\<\\|(.*)\\|\\>\"\n",
     "\n",
@@ -243,7 +244,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "from simpletransformers.language_generation import LanguageGenerationModel, LanguageGenerationArgs\n",
+    "from simpletransformers.language_generation import LanguageGenerationModel\n",
     "\n",
     "text_model_generator = LanguageGenerationModel(\"gpt2\", f\"{model_output_dir}/best_model\", args={\n",
     "\t'max_length': 1000,\n",
