Adding things to make it post

--- a/notebooks/run_gpt-xl-trainin.ipynb
+++ b/notebooks/run_gpt-xl-trainin.ipynb
@@ -17,14 +17,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def has_valid_line(input: str) -> bool:\n",
-    "    black_list = [\"**NO SIGN**\", \"**Image Stats:**\", \"**INCOMPLETE MEAT TUBE**\", \"[removed]\", \"[deleted]\", 'Unfortunately, your post was removed for the following reason(s)']\n",
-    "    for line in black_list:\n",
-    "        if input.__contains__(line):\n",
-    "            print(f\":: Line contains word {line}... Skipping\")\n",
-    "            return False\n",
-    "        else:\n",
-    "            return True"
+    "def has_valid_line(input_line: str) -> bool:\n",
+    "    bad_words_found = []\n",
+    "    black_list = [\"[removed]\", \"[deleted]\"]\n",
+    "    for word in black_list:\n",
+    "        if input_line.lower().__contains__(word.lower()):\n",
+    "            print(f\":: Line contains word {word}... Skipping\")\n",
+    "            bad_words_found.append(input_line)\n",
+    "\n",
+    "    return len(bad_words_found) == 0"
    ],
    "metadata": {
     "collapsed": false
@@ -41,7 +42,7 @@
     "import torch\n",
     "from torch.utils.data import random_split\n",
     "\n",
-    "training_data_path = \"/content/drive/MyDrive/RawData/yuli-bot/training_2.csv\"\n",
+    "training_data_path = \"/content/drive/MyDrive/RawData/daya/Yuli-Ban-training.csv\"\n",
     "\n",
     "df = pandas.read_csv(training_data_path)\n",
     "\n",
@@ -64,6 +65,8 @@
     "print(f\"Eval: {len(eval_dataset_file)}\")\n",
     "print(f\"Total: {len(train_dataset_file)  + len(eval_dataset_file)}\")\n",
     "\n",
+    "# Note: Something is still fucked up with this. It sort of works but if you look at the number of samples the trainer receives it does not report the total as printed above...\n",
+    "# I think to maintain parody we need to use .txt files, and it appears like the implementation takes about anything valid...\n",
     "with open('/content/finetune-gpt2xl/train.csv', mode='w', encoding='utf-8') as csv_file:\n",
     "    fieldnames = ['text']\n",
     "    writer = csv.DictWriter(csv_file, fieldnames=fieldnames)\n",
