--- a/notebooks/run_gpt2_medium_training.ipynb
+++ b/notebooks/run_gpt2_medium_training.ipynb
@@ -77,15 +77,15 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def has_valid_line(input: str) -> bool:\n",
-    "\tblack_list = [\"**NO SIGN**\", \"**Image Stats:**\", \"**INCOMPLETE MEAT TUBE**\", \"[removed]\", \"[deleted]\",\n",
-    "\t\t\t\t  'Unfortunately, your post was removed for the following reason(s)']\n",
-    "\tfor line in black_list:\n",
-    "\t\tif input.__contains__(line):\n",
-    "\t\t\tprint(f\":: Line contains word {line}... Skipping\")\n",
-    "\t\t\treturn False\n",
-    "\t\telse:\n",
-    "\t\t\treturn True"
+    "def has_valid_line(input_line: str) -> bool:\n",
+    "    bad_words_found = []\n",
+    "    black_list = [\"[removed]\", \"[deleted]\"]\n",
+    "    for word in black_list:\n",
+    "        if input_line.lower().__contains__(word.lower()):\n",
+    "            print(f\":: Line contains word {word}... Skipping\")\n",
+    "            bad_words_found.append(input_line)\n",
+    "\n",
+    "    return len(bad_words_found) == 0"
    ],
    "metadata": {
     "collapsed": false
